tests/semantic/invalid/07_invalid_main_void.tc
// ERR_INVALID_MAIN_SIGNATURE: main must return int, not void
void main(void) {
    return;
}
